<resources>
    <string name="app_name">Adopte un Caddie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lorem">lorem ipsum</string>
    <string name="hint_manualBarcode">Entrez un code barre manuellement</string>
    <string name="title_barcodeScanningFragment">
        ou<br/>
        Scannez un code-barre
    </string>
    <string name="backToBasket">Retourner au panier</string>
    <string name="menu_barcodeScanner">Scanner de code-barre</string>
    <string name="ok">OK</string>


    <!-- Geolocation -->
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <!-- Barcode Scanner-->
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="grant">GRANT</string>
    <string name="cancel">CANCEL</string>

    <!-- Open Food Facts -->
    <string name="txtNutritionLevelLow">en faible quantité</string>
    <string name="txtNutritionLevelModerate">en quantité modérée</string>
    <string name="txtNutritionLevelHigh">en quantité élevée</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_e">Vitamin E</string>
    <string name="vitamin_k">Vitamin K</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="vitamin_b1">Vitamin B1</string>
    <string name="vitamin_b2">Vitamin B2</string>
    <string name="vitamin_pp">Vitamin PP</string>
    <string name="vitamin_b6">Vitamin B6</string>
    <string name="vitamin_b9">Vitamin B9</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="biotin">Biotin</string>
    <string name="pantothenic_acid">Pantothenic acid</string>
    <string name="nutrition_minerals">Minerals</string>
    <string name="silica">Silica</string>
    <string name="bicarbonate">Bicarbonate</string>
    <string name="potassium">Potassium</string>
    <string name="chloride">Chloride</string>
    <string name="calcium">Calcium</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="zinc">Zinc</string>
    <string name="copper">Copper</string>
    <string name="manganese">Manganese</string>
    <string name="fluoride">Fluoride</string>
    <string name="selenium">Selenium</string>
    <string name="chromium">Chromium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="iodine">Iodine</string>
    <string name="caffeine">Caffeine</string>
    <string name="taurine">Taurine</string>
    <string name="ph">pH</string>
    <string name="fruits_vegetables_nuts">Fruits, vegetables, nuts</string>
    <string name="collagen_meat_protein_ratio">Collagen meat protein ratio</string>
    <string name="cocoa">Cocoa</string>
    <string name="chlorophyl">Chlorophyl</string>

    <string name="nutrition_satured_fat">Saturated fat</string>
    <string name="nutrition_omega3">Omega 3</string>
    <string name="nutrition_omega6">Omega 6</string>
    <string name="nutrition_omega9">Omega 9</string>
    <string name="nutrition_sucrose">Sucrose</string>
    <string name="nutrition_glucose">Glucose</string>
    <string name="nutrition_fructose">Fructose</string>
    <string name="nutrition_maltose">Maltose</string>
    <string name="nutrition_alcohol">Alcohol</string>
    <string name="nutrition_vitamins">Vitamins</string>
    <string name="nutrition_sugars">Sugars</string>
    <string name="nutrition_lactose">Lactose</string>
    <string name="nutrition_casein">Casein</string>
    <string name="nutrition_maltodextrins">Maltodextrins</string>
    <string name="nutrition_serum_proteins">Serum Proteins</string>
    <string name="nutrition_nucleotides">Nucleotides</string>
    <string name="nutrition_cholesterol">Cholesterol</string>
    <string name="nutrition_trans_fat">Trans fat</string>
    <string name="nutrition_monounsaturatedFat">Monounsaturated fat</string>
    <string name="nutrition_polyunsaturatedFat">Polyunsaturated fat</string>


    <string name="addToBasket">Ajouter au panier</string>
    <string name="price">Prix</string>
    <string name="nutriscore">Nutri-score</string>
    <string name="menu_productScanned">Fiche du produit</string>
    <string name="productNotFound">Produit introuvable</string>

    <string name="brand">Marque</string>
    <string name="nbOfIngredients">Nombre d\'ingrédients</string>
    <string name="packaging">Emballage</string>
    <string name="allergens">Allergènes</string>
    <string name="volume">Poids/Volume</string>
    <string name="energy_kcal">Energie (en kcal)</string>
    <string name="sugars">Sucres</string>
    <string name="salt">Sel</string>
    <string name="proteins">Protéines</string>
    <string name="carbohydrates">Glucides</string>
    <string name="sodium">Sodium</string>

    <string name="menu_basket">Panier</string>
    <string name="menu_payment">Paiment du panier</string>
    <string name="payment_list">Gestion des moyens de paiement</string>
    <string name="favorite_shops">Liste des magasins favoris</string>
    <string name="languages">Langues</string>
    <string name="eula">Conditions d\'Utilisation</string>
    <string name="menu_settings">Paramètres de l\'utilisateur</string>
    <string name="menu_sources">Sources de développement</string>

    <string-array name="shop_names">
        <item>Auchan</item>
        <item>Carrefour</item>
        <item>Monoprix</item>
    </string-array>

</resources>