<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_header">
        <item
            android:id="@+id/nav_barcodeScanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_barcodeScanner" />

        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/menu_basket" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_footer">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>
</menu>