<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.wheretobuy.adopteuncaddie.ui.settings.SettingsViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/defaultStartEndMargin"
        android:layout_marginEnd="@dimen/defaultStartEndMargin"
        android:layout_marginTop="@dimen/defaultStartEndMargin"
        android:layout_marginBottom="@dimen/defaultStartEndMargin">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/defaultInterComponentMargin"
            android:layout_marginBottom="@dimen/defaultInterComponentMargin">

            <TextView
                android:id="@+id/lbl_favorite_shops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/favorite_shops"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:padding="@dimen/defaultInterComponentMargin"
                android:layout_marginBottom="@dimen/defaultInterComponentMargin"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_shops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/defaultInterComponentMargin"
            android:layout_marginBottom="@dimen/defaultInterComponentMargin">

            <TextView
                android:layout_marginBottom="@dimen/defaultInterComponentMargin"
                android:id="@+id/lbl_payment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/payment_list"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:padding="@dimen/defaultInterComponentMargin"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/defaultInterComponentMargin"
            android:layout_marginBottom="@dimen/defaultInterComponentMargin">

            <TextView
                android:layout_marginBottom="@dimen/defaultInterComponentMargin"
                android:padding="@dimen/defaultInterComponentMargin"
                android:id="@+id/lbl_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/languages"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/defaultInterComponentMargin"
            android:layout_marginBottom="@dimen/defaultInterComponentMargin">

            <TextView
                android:layout_marginBottom="@dimen/defaultInterComponentMargin"
                android:padding="@dimen/defaultInterComponentMargin"
                android:id="@+id/lbl_eula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/eula"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_eula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>
</layout>
